fix: error message alignment in dashboard tiles

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -131,6 +131,7 @@
 
   .query-output-error-message {
     opacity: 0.8;
+    margin: auto;
   }
 
   .layout-splitter {
